--- a/public/assets/css/mngMenu.css
+++ b/public/assets/css/mngMenu.css
@@ -5,7 +5,13 @@ body {
     font-family: 'Livvic', sans-serif !important;
 }
 
-.modal-body .image-container:hover img {
+#contentPreview {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
+}
+/* .modal-body .image-container:hover img {
     opacity: 1;
     filter: blur(2px);
     -webkit-filter: blur(2px);
@@ -29,7 +35,7 @@ body {
 
 .modal-body .image-container:hover .hover-text {
     opacity: 1;
-}
+} */
 
 .iconHover button:hover {
     background-color: #ad98ee !important;
